--- a/c_src/makefile
+++ b/c_src/makefile
@@ -2,10 +2,14 @@ all: circle celsius2fahr
 
 circle: circle.c
 	cc -o circle circle.c
+	echo "circle is created"
+
+dircle.o: circle.c
+	cc -c circle.c
+	echo "circle.o is created"
 
 celsius2fahr: celsius2fahr.c
 	cc -o celsius2fahr celsius2fahr.c
-
 
 clean:
 	rm -f 
