--- a/cpp_src/.vscode/tasks.json
+++ b/cpp_src/.vscode/tasks.json
@@ -57,10 +57,7 @@
             "problemMatcher": [
                 "$gcc"
             ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
+            "group": "build",
             "detail": "컴파일러: /usr/bin/g++"
         },
         {
@@ -82,6 +79,29 @@
             ],
             "group": "build",
             "detail": "컴파일러: /usr/bin/gcc"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++-11 활성 파일 빌드",
+            "command": "/usr/bin/g++-11",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "컴파일러: /usr/bin/g++-11"
         }
     ],
     "version": "2.0.0"
