--- a/cpp_src/.vscode/settings.json
+++ b/cpp_src/.vscode/settings.json
@@ -2,6 +2,11 @@
     "files.associations": {
         "iostream": "cpp",
         "ex_2_4cpp": "c",
-        "ostream": "cpp"
-    }
+        "ostream": "cpp",
+        "functional": "cpp",
+        "iosfwd": "cpp",
+        "sstream": "cpp",
+        "vector": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
