--- a/c_src/.vscode/tasks.json
+++ b/c_src/.vscode/tasks.json
@@ -58,11 +58,31 @@
 			"problemMatcher": [
 				"$gcc"
 			],
+			"group": "build",
+			"detail": "컴파일러: /usr/bin/gcc"
+		},
+		{
+			"type": "cppbuild",
+			"label": "C/C++: gcc-11 활성 파일 빌드",
+			"command": "/usr/bin/gcc-11",
+			"args": [
+				"-fdiagnostics-color=always",
+				"-g",
+				"${file}",
+				"-o",
+				"${fileDirname}/${fileBasenameNoExtension}"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$gcc"
+			],
 			"group": {
 				"kind": "build",
 				"isDefault": true
 			},
-			"detail": "컴파일러: /usr/bin/gcc"
+			"detail": "컴파일러: /usr/bin/gcc-11"
 		}
 	]
 }
